--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,15 @@
     --foreground: #ededed;
   }
 }
-
+/* global.css */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;  /* Firefox */
+}
 body {
   background: var(--background);
   color: var(--foreground);
