--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,5 +30,6 @@ input[type=number] {
 body {
   background: var(--background);
   color: var(--foreground);
+  padding: 40px;
   font-family: Arial, Helvetica, sans-serif;
 }
