--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-pretendard:var(var(--font-pretendard))
 }
 
 @media (prefers-color-scheme: dark) {
@@ -31,5 +32,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   padding: 40px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-pretendard),Arial, Helvetica, sans-serif;
 }
