[feat]: 변수 오타 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --font-pretendard:var(var(--font-pretendard))
+  --font-pretendard:var(--font-pretendard)
 }
 
 @media (prefers-color-scheme: dark) {
